<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/preview_video"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/preview"/>
    <item
        android:id="@+id/publish_video"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/publish_video"/>
    <item
        android:id="@+id/save_video"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/save_video"/>
    <item
        android:id="@+id/delete_frame"
        android:orderInCategory="20"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete_frame"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>