<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMemeImage"
    android:orientation="vertical"
    android:background="@drawable/grey_noise"
    android:id="@+id/editMemeImageLayout"
    tools:ignore="MergeRootFrame" >
    
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:layout_gravity="center_horizontal|center_vertical"
                android:onClick="updateText" >
             <ProgressBar
	            android:id="@+id/progressBar1"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_marginBottom="0dp"
	            android:layout_height="4dp" />
            <ImageView
                android:contentDescription="@string/meme_in_progress"
                android:layout_marginTop="20dp"
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_below="@+id/progressBar1" />
            </RelativeLayout>
            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:hint="@string/edit_text_hint_title"
                android:inputType="textShortMessage"
                android:textColor="@color/button_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:inputType="textShortMessage"
                android:hint="@string/edit_text_hint_content"
                android:textColor="@color/button_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>